k8s/my-media-stack/raw/default-network-policy.yml
#! my-media-stack-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-media-stack-network-policy
  namespace: my-media-stack
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels: {}
  egress:
    - to:
        - podSelector:
            matchLabels: {}
